<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ResourceManagerActivity!</string>
    <string name="app_name">ResourceManager</string>
    <string name="title">Lista de Recursos</string>
    <string name="createResBt">Criar Recurso</string>
    <string name="resManager">Gerenciador de recursos</string>
    <string name="locTitle">Localização</string>
    <string name="xLoc">X</string>
    <string name="yLoc">Y</string>
    <string name="regRes">Registrar Recurso</string>
    <string name="listDispResTitle">Lista de Recursos Disponíveis</string>
    <string name="listRegResTitle">Lista de Recursos Registrados</string>
    <string name="resSearchTitle">Consulta de Recursos:</string>
    <string name="typeTitle">Tipo do Recurso</string>
    <string name="searchResBt">Consultar Recurso</string>
    <string name="resAccesTitle">Acesso ao Recurso</string>
    <string name="attTitle">Atributos</string>
    <string name="opTitle">Operações</string>
    <string name="statusTitle">Estado</string>
</resources>
