<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1" android:orientation="vertical">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/resManager" android:id="@+id/textView2" android:layout_gravity="center_vertical" android:layout_width="1007dp" ></TextView>
    <Button android:id="@+id/button1" android:layout_height="wrap_content" android:text="@string/createResBt" android:layout_width="687dp"></Button>
<TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/listDispResTitle"></TextView>
<Spinner android:id="@+id/spinner1" android:layout_height="wrap_content" android:layout_width="658dp"></Spinner>
<TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/locTitle" android:layout_width="wrap_content" android:id="@+id/textView3" ></TextView>
<TextView android:layout_height="wrap_content" android:text="@string/xLoc" android:layout_width="wrap_content" android:id="@+id/textView4" ></TextView>
<EditText  android:id="@+id/editText1" android:layout_height="wrap_content" android:inputType="number" android:layout_width="148dp"></EditText>
<TextView android:layout_height="wrap_content" android:text="@string/yLoc" android:layout_width="wrap_content" android:id="@+id/textView5" ></TextView>
<EditText  android:id="@+id/editText2" android:layout_height="wrap_content" android:inputType="number" android:layout_width="148dp"></EditText>
<Button android:id="@+id/button2" android:layout_height="wrap_content" android:layout_width="373dp" android:text="@string/regRes"></Button>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView6"  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/listRegResTitle"></TextView>
<Spinner android:id="@+id/spinner2" android:layout_height="wrap_content" android:layout_width="699dp"></Spinner>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView7"  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/resSearchTitle"></TextView>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView8"  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/typeTitle"></TextView>
<Spinner android:id="@+id/spinner3" android:layout_height="wrap_content" android:layout_width="620dp"></Spinner>
<Button android:id="@+id/button3" android:layout_height="wrap_content" android:layout_width="299dp" android:text="@string/searchResBt"></Button>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView9"  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/resAccesTitle"></TextView>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView10"  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/attTitle"></TextView>
<Spinner android:layout_height="wrap_content" android:id="@+id/spinner5" android:layout_width="717dp"></Spinner>
<EditText android:layout_height="wrap_content" android:id="@+id/editText3" android:layout_width="716dp">
    <requestFocus></requestFocus>
</EditText>
<Button android:text="Button" android:id="@+id/button4" android:layout_height="wrap_content" android:layout_width="361dp"></Button>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView11"  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/opTitle"></TextView>
<Spinner android:layout_height="wrap_content" android:id="@+id/spinner4" android:layout_width="735dp"></Spinner>
<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView12"  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/statusTitle"></TextView>
</LinearLayout>
